--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,34 +1,26 @@
-body {
-  text-align: center;
-}
-
 nav {
-  background-color: steelblue;
   padding: 10px;
+  text-align: center;
 }
 
 a {
   color: white;
   margin: 40px;
+  font-size: 1.5em;
 }
 
 h1 {
   color: steelblue;
+  text-align: center;
 }
 
 img {
-  width: 800px;
+  width: 80%;
   border: 4px solid steelblue;
+  display: block;
+  margin: 0 auto;
 }
 
-p {
-  padding: 10px;
-}
-
-footer {
-  background-color: steelblue;
-  color: white;
-}
 
 .main-para {
   font-size: 1.5em;
@@ -36,6 +28,28 @@ footer {
 }
 
 #active {
+  background-color: white;
+  color: steelblue;
+}
+
+main p {
+  width: 80%;
+  margin: 50px auto;
+  text-align: center;
+}
+
+nav, footer {
+  background-color: steelblue;
+  color: white;
+}
+
+footer p {
+  font-size: 20px;
+  margin: 20px auto;
+  text-align: center;
+}
+
+a:hover {
   background-color: white;
   color: steelblue;
 }
