--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital@1&family=Montserrat:ital@1&display=swap');
+
 #content {
     max-width: 1600px;
     margin: 0 auto;
@@ -7,6 +9,7 @@ nav a {
     text-align: center;
     color: white;
     text-decoration: none;
+    padding: 35px;
 }
 
 #hero-msg h1, #hero-msg h4 {
@@ -21,13 +24,20 @@ main section {
     text-align: center;
 }
 
+main section img {
+    box-sizing: border-box;
+}
+
 #background {
     height: 725px;
 }
 
 
 body {
-    background-color: white; 
+    background-color: white;
+    font-size: 22px;
+    margin: 0;
+    padding: 0; 
 }
 
 header {
@@ -40,9 +50,13 @@ nav a:hover {
 }
 
 .book, .join {
-    background-color: #134266;
-    color: white;
+    background-color: #E2B144;
+    color: black;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 
 .book:hover, .join:hover {
@@ -55,27 +69,47 @@ nav a:hover {
 }
 
 .msg {
-    background-color: #134266; 
+    background-color: #134266;
+    line-height: 1.5em;
+    padding: 35px; 
+    margin-top: 35px;
 }
 
 footer {
     background-color: #134266;
+    padding: 25px 50px;
+    margin-top: 200px;
+}
+
+footer .social img {
+    padding-top: 15px;
 }
 
 .home-title {
+    font-family: "Montserrat Alternates", "Helvetica", "sans-serif";
     color: #134266;
+    font-size: 2em;
+    margin-top: 10px;
 }
 
 h4 {
     color: #134266;
 }
 
+h2 {
+    margin: 0;
+}
+
 .msg h2 {
+    font-family: "Montserrat Alternates", "Helvetica", "sans-serif";
     color: #E2B144;
 }
 
 .msg p{
     color: #E2B144;
+    font-size: .8em;
+    /*padding: 35px;*/
+    padding-bottom: 15px;
 }
 
 footer h3 {
@@ -97,13 +131,27 @@ footer a:hover {
     width: 80px;
 }
 
+#logo_link {
+    padding-top: 5px;
+}
+
 .icon {
     width: 80px;
+    padding-top: 10px;
 }
 
 #hero-img {
     width: 100%;
 }
 
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+}
 
+.card-img {
+    border: 10px solid #4a171e;
+}
 
+.mountains {
+    margin-top: 35px;
+}
