--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -35,6 +35,7 @@ main section img {
 
 body {
     background-color: white;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial;
     font-size: 22px;
     margin: 0;
     padding: 0; 
